cmake_minimum_required(VERSION 3.19)
project(white_belt)

set(CMAKE_CXX_STANDARD 14)

add_executable(white_belt week3/main.cpp week3/Factorial.cpp week3/UpdateIfGreater.cpp week3/move_strings.cpp week3/Reverse.cpp week3/absSort.cpp week3/case_insesitive_sort.cpp week3/SortedStrings.cpp week3/SortedStrings.h week3/Person_with_updating_dict.cpp week3/Person_with_updating_dict.h week3/Person_v2.cpp week3/Person_v2.h)